--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+.App,.Items{
   text-align: center;
   background-image: url('./canitoLogoKlein.jpg');
   flex-direction: row;
@@ -9,7 +9,7 @@
   margin:10;
   cursor: pointer;
 }
-.Items{
+/* .Items{
 
   flex-direction: row;
   display:flex;
@@ -19,7 +19,7 @@
   margin:10;
   cursor: pointer;
 
-}
+} */
 .App-logo {
   height: 40vmin;
   pointer-events: none;
