--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App,.Items{
   text-align: center;
   background-image: url('./canitoLogoKlein.jpg');
-  flex-direction: row;
+  /* flex-direction: row; */
   display:flex;
   align-items: center;
   flex-wrap: wrap;
@@ -53,4 +53,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.footer,a{
+
+margin:10px;
+text-decoration: none;
+justify-content: center;
+text-align: center;
+cursor: pointer;
+
+
 }
